--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     # .env variable in container
     environment:
       POSTGRES_URI: postgres://admin:password@postgres:5432/smart-brain-docker
+      REDIS_URI: redis://redis:6379
       # วิธีที่ 2
       # POSTGRES_USER: admin
       # POSTGRES_PASSWORD: password
@@ -20,6 +21,7 @@ services:
     links:
       # service link name
       - postgres
+      - redis
     ports:
       # localport:dockerport
       - '3000:3000'
@@ -39,3 +41,9 @@ services:
     build: ./postgres
     ports:
       - '5432:5432'
+
+  # Redis
+  redis:
+    image: redis
+    ports:
+      - '6379:6379'
